raise2solve-gitops/apps/raise2solve/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: raise2solve
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
